= BinData Changelog

== Version 2.0.x (2014-xx-xx)

* Performance improvements.
* Removed deprecated parameters.
* Code refactored to use Ruby 1.9 features.
* #eval_parameters can now call private methods.  Requested by Ole Rasmussen.
* Can now determine state of :onlyif fields.  Requested by Ole Rasmussen.
* Renamed #offset to #abs_offset for clarity.  #offset is now deprecated.

== Version 2.0.0 (2014-02-02)

* Ruby 1.8 now has its own separate branch.
* Struct now uses symbols for field names instead of strings.
* Added signed bitfields.  Requested by redood.
* Virtual fields can now have names.
* Bug fixes.

== Version 1.8.0 (2014-01-06)

* Allow custom types to have endian, not just numerics.
* Added missing field to TCP example.  Thanks to Bertrand Paquet.
* Made tests compatible with JRuby.  Thanks to Charles Oliver Nutter.
* Support travis ci for those that use it.  Thanks to Charles Oliver Nutter.
* Added Buffer for easier handling of nested streams.
* Added Virtual field.

== Version 1.6.0 (2013-09-02)

* Added license to .gemspec
* Moved test suite from RSpec to Minitest.
* Added :assert and :asserted_value.
* :check_value has been deprecated. Use :assert instead.

== Version 1.5.1 (2013-08-16)

* Rework build system and include .gemspec.  Requested by Simon Shortman.
* Fixed bug when Choice#clear didn't clear everything.  Thanks to Simon
  Shortman for the bug report.
* Moved BinData::VERSION into its own file.  Thanks to John Van Enk.

== Version 1.5.0 (2013-05-21)

* Moved to github.
* Updated to Ruby 2.0
* Arrays now accept BinData object factories for :type (feature request by
  Matt Dainty).
* Dynamically generated BinData objects can use the :name parameter to
  register themselves.
* Remove functionality that has been deprecated for two years.

== Version 1.4.5 (2012-07-24)

* Added the :pad_front option for padding to occur at the front of a String.
  (suggested by Eduardo Mourão).

== Version 1.4.4 (2012-06-21)
